# Learn-Java

./: .gitignore  build.gradle.kts  settings.gradle.kts
ByteBuddy/: build.gradle.kts
DesignPattern/: build.gradle.kts
JNI/: build.gradle.kts
JNI/src/main/cpp/: top_catnies_simplelib_SimpleLibSource.cpp
Netty/: build.gradle.kts
NginxConf/src/main/resources/: nginx.conf
Reflection/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/main/java/: Run.java
src/main/java/cn/chengzhiya/mhdfverify/: Verify.java
src/main/java/top/catnies/: Main.java
src/main/java/top/catnies/jni/simplelib/: SimpleLibSource.java
src/main/java/top/catnies/learnjava/ByteBuddy/: ByteBuddyClass.java  ByteBuddyClassCreator.java  ByteBuddyClassProxyAnno.java  ByteBuddyClassWithField.java  ByteBuddyClassWithInterface.java  ByteBuddyClassWithMethod.java
src/main/java/top/catnies/learnjava/ClassLoader/: DynamicClassLoader.java  Resource.java
src/main/java/top/catnies/learnjava/CollectionFramework/: MyArrayList.java  MyArrayQueue.java  MyArrayStack.java  MyBinaryTree.java  MyCycleArray.java  MyLinkedList.java
src/main/java/top/catnies/learnjava/JNI/cpp/: CMakeLists.txt  top_catnies_simplelib_SimpleLibSource.h
src/main/java/top/catnies/learnjava/JavaAgent/: AttachTool.java  MANIFEST.MF  MainApp.java  SimpleAgent.java  TargetApp.java
src/main/java/top/catnies/learnjava/Reflection/: Example.java  PerformanceComparison.java  PrivateClass.java  ReflectionBenchmark.java  ReflectionMain.java  TargetClass.java  (+1 more)
src/main/java/top/catnies/simplelib/: SimpleLibSource.java
(+143 files in other folders)
